[project]
name = "mhy-bot"
version = "0.1.0"
description = "mhy-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "QQ", module_name = "nonebot.adapters.qq" },
]
plugins = ["nonebot_plugin_saa", "nonebot_plugin_apscheduler"]
plugin_dirs = ["plugins"]
builtin_plugins = []
